// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`client/messaging/common-message-layout/TextMessage message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="message-layout__MessageContainer-sc-5nek6h-3 dzHtVV"
    role="document"
  >
    <div
      class="tooltip__TooltipChildrenContainer-sc-qaqusi-0 iWpqqv message-layout__StyledTooltip-sc-5nek6h-1 kkuVTq"
      tabindex="0"
    >
      <span
        class="message-layout__Timestamp-sc-5nek6h-2 cTRItT"
      >
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 cpYpna"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 cpYpna"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="connected-username__Username-sc-1uo72rz-0 icxwjx common-message-layout__Username-sc-hg9wkq-0 gfxhJY"
    >
      <span
        aria-label="Username loading…"
        class="connected-username__LoadingName-sc-1uo72rz-1 ckkWDH"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="message-layout__Separator-sc-5nek6h-0 cpYpna"
    >
      : 
    </i>
    <span
      class="common-message-layout__Text-sc-hg9wkq-1 lpdHEy"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="message-layout__MessageContainer-sc-5nek6h-3 dzHtVV"
    role="document"
  >
    <div
      class="tooltip__TooltipChildrenContainer-sc-qaqusi-0 iWpqqv message-layout__StyledTooltip-sc-5nek6h-1 kkuVTq"
      tabindex="0"
    >
      <span
        class="message-layout__Timestamp-sc-5nek6h-2 cTRItT"
      >
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 cpYpna"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 cpYpna"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="connected-username__Username-sc-1uo72rz-0 icxwjx common-message-layout__Username-sc-hg9wkq-0 gfxhJY"
    >
      <span
        aria-label="Username loading…"
        class="connected-username__LoadingName-sc-1uo72rz-1 ckkWDH"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="message-layout__Separator-sc-5nek6h-0 cpYpna"
    >
      : 
    </i>
    <span
      class="common-message-layout__Text-sc-hg9wkq-1 lpdHEy"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="message-layout__MessageContainer-sc-5nek6h-3 dzHtVV"
    role="document"
  >
    <div
      class="tooltip__TooltipChildrenContainer-sc-qaqusi-0 iWpqqv message-layout__StyledTooltip-sc-5nek6h-1 kkuVTq"
      tabindex="0"
    >
      <span
        class="message-layout__Timestamp-sc-5nek6h-2 cTRItT"
      >
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 cpYpna"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 cpYpna"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="connected-username__Username-sc-1uo72rz-0 icxwjx common-message-layout__Username-sc-hg9wkq-0 gfxhJY"
    >
      <span
        aria-label="Username loading…"
        class="connected-username__LoadingName-sc-1uo72rz-1 ckkWDH"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="message-layout__Separator-sc-5nek6h-0 cpYpna"
    >
      : 
    </i>
    <span
      class="common-message-layout__Text-sc-hg9wkq-1 lpdHEy"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="connected-username__Username-sc-1uo72rz-0 icxwjx common-message-layout__MentionedUsername-sc-hg9wkq-2 iEBlzW"
      >
        @
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 ckkWDH"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="message-layout__MessageContainer-sc-5nek6h-3 dzHtVV"
    role="document"
  >
    <div
      class="tooltip__TooltipChildrenContainer-sc-qaqusi-0 iWpqqv message-layout__StyledTooltip-sc-5nek6h-1 kkuVTq"
      tabindex="0"
    >
      <span
        class="message-layout__Timestamp-sc-5nek6h-2 cTRItT"
      >
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 cpYpna"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 cpYpna"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="connected-username__Username-sc-1uo72rz-0 icxwjx common-message-layout__Username-sc-hg9wkq-0 gfxhJY"
    >
      <span
        aria-label="Username loading…"
        class="connected-username__LoadingName-sc-1uo72rz-1 ckkWDH"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="message-layout__Separator-sc-5nek6h-0 cpYpna"
    >
      : 
    </i>
    <span
      class="common-message-layout__Text-sc-hg9wkq-1 lpdHEy"
    >
      hey
       
      <span
        class="connected-username__Username-sc-1uo72rz-0 icxwjx common-message-layout__MentionedUsername-sc-hg9wkq-2 iEBlzW"
      >
        @
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 ckkWDH"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="connected-username__Username-sc-1uo72rz-0 icxwjx common-message-layout__MentionedUsername-sc-hg9wkq-2 iEBlzW"
      >
        @
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 ckkWDH"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="message-layout__MessageContainer-sc-5nek6h-3 dzHtVV"
    role="document"
  >
    <div
      class="tooltip__TooltipChildrenContainer-sc-qaqusi-0 iWpqqv message-layout__StyledTooltip-sc-5nek6h-1 kkuVTq"
      tabindex="0"
    >
      <span
        class="message-layout__Timestamp-sc-5nek6h-2 cTRItT"
      >
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 cpYpna"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 cpYpna"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="connected-username__Username-sc-1uo72rz-0 icxwjx common-message-layout__Username-sc-hg9wkq-0 gfxhJY"
    >
      <span
        aria-label="Username loading…"
        class="connected-username__LoadingName-sc-1uo72rz-1 ckkWDH"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="message-layout__Separator-sc-5nek6h-0 cpYpna"
    >
      : 
    </i>
    <span
      class="common-message-layout__Text-sc-hg9wkq-1 lpdHEy"
    >
      hey
       
      <span
        class="connected-username__Username-sc-1uo72rz-0 icxwjx common-message-layout__MentionedUsername-sc-hg9wkq-2 iEBlzW"
      >
        @
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 ckkWDH"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="message-layout__MessageContainer-sc-5nek6h-3 dzHtVV"
    role="document"
  >
    <div
      class="tooltip__TooltipChildrenContainer-sc-qaqusi-0 iWpqqv message-layout__StyledTooltip-sc-5nek6h-1 kkuVTq"
      tabindex="0"
    >
      <span
        class="message-layout__Timestamp-sc-5nek6h-2 cTRItT"
      >
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 cpYpna"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 cpYpna"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="connected-username__Username-sc-1uo72rz-0 icxwjx common-message-layout__Username-sc-hg9wkq-0 gfxhJY"
    >
      <span
        aria-label="Username loading…"
        class="connected-username__LoadingName-sc-1uo72rz-1 ckkWDH"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="message-layout__Separator-sc-5nek6h-0 cpYpna"
    >
      : 
    </i>
    <span
      class="common-message-layout__Text-sc-hg9wkq-1 lpdHEy"
    >
      <span
        class="connected-username__Username-sc-1uo72rz-0 icxwjx common-message-layout__MentionedUsername-sc-hg9wkq-2 iEBlzW"
      >
        @
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 ckkWDH"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="message-layout__MessageContainer-sc-5nek6h-3 dzHtVV"
    role="document"
  >
    <div
      class="tooltip__TooltipChildrenContainer-sc-qaqusi-0 iWpqqv message-layout__StyledTooltip-sc-5nek6h-1 kkuVTq"
      tabindex="0"
    >
      <span
        class="message-layout__Timestamp-sc-5nek6h-2 cTRItT"
      >
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 cpYpna"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 cpYpna"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="connected-username__Username-sc-1uo72rz-0 icxwjx common-message-layout__Username-sc-hg9wkq-0 gfxhJY"
    >
      <span
        aria-label="Username loading…"
        class="connected-username__LoadingName-sc-1uo72rz-1 ckkWDH"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="message-layout__Separator-sc-5nek6h-0 cpYpna"
    >
      : 
    </i>
    <span
      class="common-message-layout__Text-sc-hg9wkq-1 lpdHEy"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="connected-username__Username-sc-1uo72rz-0 icxwjx common-message-layout__MentionedUsername-sc-hg9wkq-2 iEBlzW"
      >
        @
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 ckkWDH"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="message-layout__MessageContainer-sc-5nek6h-3 eielNC"
    role="document"
  >
    <div
      class="tooltip__TooltipChildrenContainer-sc-qaqusi-0 iWpqqv message-layout__StyledTooltip-sc-5nek6h-1 kkuVTq"
      tabindex="0"
    >
      <span
        class="message-layout__Timestamp-sc-5nek6h-2 cTRItT"
      >
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 cpYpna"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 cpYpna"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="connected-username__Username-sc-1uo72rz-0 icxwjx common-message-layout__Username-sc-hg9wkq-0 gfxhJY"
    >
      <span
        aria-label="Username loading…"
        class="connected-username__LoadingName-sc-1uo72rz-1 ckkWDH"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="message-layout__Separator-sc-5nek6h-0 cpYpna"
    >
      : 
    </i>
    <span
      class="common-message-layout__Text-sc-hg9wkq-1 lpdHEy"
    >
      Hey
       
      <span
        class="connected-username__Username-sc-1uo72rz-0 icxwjx common-message-layout__MentionedUsername-sc-hg9wkq-2 iEBlzW"
      >
        @
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 ckkWDH"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;
